perf: 修正tunnel注册逻辑
由服务端控制，需要时通知客户端连接